// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maybe_return.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function getScaledData({x}): ?{foo: number} {}

=====================================output=====================================
function getScaledData({ x }): ?{ foo: number } {}

================================================================================
`;

exports[`prettier-ignore.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type A = {
  // prettier-ignore
  +input: ?(?B),
}

=====================================output=====================================
type A = {
  // prettier-ignore
  +input: ?(?B),
};

================================================================================
`;
